2018-08-18  Andy Estes  <aestes@apple.com>

        [watchOS] NetworkProximityManager should use WTF_MAKE_FAST_ALLOCATED
        https://bugs.webkit.org/show_bug.cgi?id=188723

        Reviewed by Sam Weinig.

        * NetworkProcess/watchos/NetworkProximityManager.h:

2018-08-18  Andy Estes  <aestes@apple.com>

        [watchOS] Add more assertions to NetworkProximityAssertion
        https://bugs.webkit.org/show_bug.cgi?id=188721

        Reviewed by Wenson Hsieh.

        * NetworkProcess/watchos/NetworkProximityAssertion.mm:
        (WebKit::NetworkProximityAssertion::hold):
        (WebKit::NetworkProximityAssertion::release):
        (WebKit::NetworkProximityAssertion::releaseTimerFired):

2018-08-18  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Paste is missing from callout bar when pasteboard only contains custom data
        https://bugs.webkit.org/show_bug.cgi?id=184271
        <rdar://problem/39256708>

        Reviewed by Ryosuke Niwa.

        Currently, the "paste:" selector action cannot be performed during editing if the pasteboard only contains
        custom pasteboard data. This is because logic in -[WKContentView canPerformActionForWebView:withSender:] only
        checks against a list of pasteboard types which does not include the type identifier for custom pasteboard data.
        To fix this, we allow pasting only in the case where none of the other type identifiers exist in the pasteboard,
        as long as the custom pasteboard data type identifier is present, and the custom pasteboard data's origin
        matches the origin of the focused frame's document.

        Test: PasteMixedContent.CopyAndPasteWithCustomPasteboardDataOnly

        * Shared/EditorState.cpp:
        (WebKit::EditorState::encode const):
        (WebKit::EditorState::decode):
        * Shared/EditorState.h:

        Add a originIdentifierForPasteboard field, and add support for encoding it when propagating EditorState via IPC.
